2008-11-19  Joe English  <jenglish@users.sourceforge.net>

	* doc/ttk_panedwindow.n: Remove inoperative text 
	stating that slave windows must be direct children
	of the master [Bug 1824996].

2008-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c    Minor simplification in fix for [Bug 2312027]:
	                          no need to malloc and copy photo type name because
	                          it is a constant to begin with.
	* generic/tkOldConfig.c   Convert Tcl_SetResult(......, TCL_DYNAMIC) to
	* mac/tkMacOSXWm.c        Tcl_SetResult(......, TCL_VOLATILE), in preparation
	* unix/tkUnixWm.c         for TIP #340
	* unix/tkUnixSend.c
	* win/tkWinWm.c

2008-11-16  Joe English  <jenglish@users.sourceforge.net>
	
	* generic/ttk/ttkWidget.c: Widget self-destruction is
	not necessarily an error [Bug 2298720].

2008-11-16  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n: Added note about [wm overrideredirect] so that users will
	avoid making unwarranted assumptions about how magical it is.
	Triggered by [Bug 2282861] discussion.

2008-11-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tk.h:        The TIP 125 implementation permits the
	* generic/tkFrame.c:   [wm manage] command to manage any widget but
	* macosx/tkMacOSXWm.c: only those with Frame instance data should be
	* unix/tkUnixWm.c:     permitted. We now check for the suitability and
	* win/tkWinWm.c:       raise an error for non-frame widgets. Updated
	* test/wm.test:        the tests and documentation. See also [Bug
	* doc/wm.n:            2239034]

2008-11-12  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Reworked widget construction and
	destruction sequence; fixes [Bug 2207435] and several other problems
	discovered during investigation of same.
	* generic/ttk/ttkButton.c (CheckbuttonInitialize): Account for
	initializeProc being called earlier in the construction sequence now.
	* tests/ttk/ttk.test: Updated test suite.
